WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
81524
Crash when closing an inspected web page with tiled drawing enabled
https://bugs.webkit.org/show_bug.cgi?id=81524
Summary
Crash when closing an inspected web page with tiled drawing enabled
Anders Carlsson
Reported
2012-03-19 10:29:53 PDT
Crash when closing an inspected web page with tiled drawing enabled
Attachments
Patch
(1.82 KB, patch)
2012-03-19 10:31 PDT
,
Anders Carlsson
sam
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Anders Carlsson
Comment 1
2012-03-19 10:31:07 PDT
Created
attachment 132604
[details]
Patch
Anders Carlsson
Comment 2
2012-03-19 10:37:32 PDT
Committed
r111202
: <
http://trac.webkit.org/changeset/111202
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug