Crash when closing an inspected web page with tiled drawing enabled https://bugs.webkit.org/show_bug.cgi?id=81524 <rdar://problem/11062396>

Reviewed by Sam Weinig.

Guard against the WebPage's underlying WebCore Page being null, which can happen
when the inspector highlight overlay is uninstalled by the inspector when the inspected
page goes away.

* WebProcess/WebPage/mac/TiledCoreAnimationDrawingArea.mm:
(WebKit::TiledCoreAnimationDrawingArea::didUninstallPageOverlay):

Canonical link: https://commits.webkit.org/98746@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@111202 268f45cc-cd09-0410-ab3c-d52691b4dbfc